--- a/mysite02/pom.xml
+++ b/mysite02/pom.xml
@@ -15,6 +15,23 @@
   </properties>
   
   <dependencies>
+    <!-- jstl/EL -->
+	<dependency>
+		<groupId>jakarta.el</groupId>
+		<artifactId>jakarta.el-api</artifactId>
+		<version>5.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>jakarta.servlet.jsp.jstl</groupId>
+		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		<version>3.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.glassfish.web</groupId>
+		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		<version>3.0.1</version>
+	</dependency>
+	
     <!-- mariadb jdbc-->
 	<dependency>
 	  <groupId>org.mariadb.jdbc</groupId>
