--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -13,6 +13,8 @@
   	<maven.compiler.source>21</maven.compiler.source>
   	<maven.compiler.target>21</maven.compiler.target>
   	<org.springframework-version>6.2.1</org.springframework-version>
+	<jcloverslf4j.version>1.7.36</jcloverslf4j.version>		
+	<logback.version>1.1.1</logback.version> 	
   </properties>
   
   <dependencies>
@@ -21,6 +23,13 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-webmvc</artifactId>
 		<version>${org.springframework-version}</version>
+		<!-- JCL 제외 -->
+		<exclusions>
+		   <exclusion>
+			  <groupId>org.springframework</groupId>
+			  <artifactId>spring-jcl</artifactId>
+		   </exclusion>
+		</exclusions>
 	</dependency>
 	
 	<!-- Spring JDBC -->
@@ -30,6 +39,18 @@
 		<version>${org.springframework-version}</version>
 	</dependency>	
 	
+	<!-- MyBatis -->
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.5.16</version>
+	</dependency>
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis-spring</artifactId>
+		<version>3.0.4</version>
+	</dependency>
+
 	<!-- Common DBCP -->
 	<dependency>
 		<groupId>commons-dbcp</groupId>
@@ -68,6 +89,18 @@
 	    <artifactId>jakarta.servlet.jsp-api</artifactId>
 	    <version>4.0.0</version>
 	    <scope>provided</scope>
+	</dependency>
+	
+	<!-- Logback --> 
+	<dependency>                                    
+		<groupId>org.slf4j</groupId>                
+		<artifactId>jcl-over-slf4j</artifactId>     
+		<version>${jcloverslf4j.version}</version>  
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>${logback.version}</version>
 	</dependency>
 	
   	<!-- servlet api -->
