--- a/mysite03/src/main/webapp/WEB-INF/web.xml
+++ b/mysite03/src/main/webapp/WEB-INF/web.xml
@@ -13,21 +13,25 @@
 	<!-- Context Parameter -->
 	<context-param>
 	   <param-name> contextConfigLocation </param-name>
-	   <param-value>/WEB-INF/applicationContext.xml</param-value>
+	   <param-value>classpath:applicationContext.xml</param-value>
 	</context-param> 	
 	  
 	<!-- Dispatcher Servlet -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<multipart-config>
+			<max-file-size>10485760</max-file-size>
+	        <max-request-size>104857600</max-request-size>
+	        <file-size-threshold>5242880</file-size-threshold>
+		</multipart-config>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	
-	  <!-- Common Errors  -->
+
+	<!-- Common Errors  -->
 	<error-page>
  		<error-code>400</error-code>
 		<location>/WEB-INF/view/error/400.jsp</location>
